<resources>
    <string name="app_name">My Store</string>
    <string name="label_product_overview">Product Overview</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_price">Unit Price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="label_supplier_overview">Supplier Overview</string>
    <string name="edit_supplier_contact">Supplier Contact</string>
    <string name="button_minus_sign">-</string>
    <string name="button_plus_sign">+</string>
    <string name="action_save">Save</string>
    <string name="action_contact_supplier">Contact Supplier</string>
    <string name="action_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="label_price">Price:</string>
    <string name="price_for_single_item">(Price for single item)</string>
    <string name="button_sale">Sale</string>
    <string name="button_edit">Edit</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="delete">Delete</string>
    <string name="add_a_product">Add a Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="required">Required</string>
    <string name="price_cannot_be_negative">Price cannot be negative</string>
    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>
    <string name="editor_insert_product_failed">Error while saving product</string>
    <string name="editor_insert_product_successful">Product Saved</string>
    <string name="editor_update_product_failed">Error with updating pet</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="error_deleting_product">Error while deleting product</string>
    <string name="product_deleted">Product Deleted</string>
    <string name="discard_changes_and_quit_editing">Discard your changes and quit editing?</string>
    <string name="delete_this_product">Delete this Product?</string>
    <string name="empty_view_text">Hello, Welcome to your personal Store \nAdd your first product...</string>
    <string name="delete_all_dialog_msg">Delete All these Products ?</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">AMAZON</string>
    <string name="supplier_flipkart">FLIPKART</string>
    <string name="supplier_ebay">EBAY</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="product_view">Product Details</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="quantity_change_msg">Quantity was change</string>
    <string name="quantity_finish_msg">No more product in stock to sell</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_price_currency">Rs </string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating product</string>
    <string name="deleted_all_products_message">rows deleted from product table</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="product_name_requires">Product name requires</string>
    <string name="price_requires">Product price requires</string>
    <string name="quantity_requires">Product quantity requires</string>
    <string name="supplier_name_requires">Supplier Name requires select anything without unknown selection</string>
    <string name="supplier_phone_requires">Supplier Phone requires</string>
</resources>
